# test

./: .gitattributes  .gitignore  .gitmodules  FACTORY_SYSTEM_PLAN.md  GEMINI.md  README.md  TOOL_CALLING_PLAN.md  VERSION_0.2.0_PLAN.md  components.json  package-lock.json  package.json  requirements.txt
docs/: video-integration-technical-spec.md
scripts/: compat.py  douyin_cookie_utils.py  douyin_get_user_info.py  douyin_im_bridge.py  douyin_im_package-lock.json  douyin_live_monitor.py  douyin_login.py  douyin_scraper.py  douyin_user_profile.py  download_model.py  downloader.py  funcall.py  funcall_tools.py  hermes_ws_bridge.py  image_manager.py  index_scraped_data.py  kb_manager.py  mpt_generate.py  mpt_helper.py  open_video.py  package-lock.json  package.json  patch-resources-for-platform.sh  pre-build-hook.sh  probe_douyin_chat.py  provider_errors.py  (+6 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: prepare-ffmpeg.ps1  prepare-ffmpeg.sh  prepare-node.ps1  prepare-node.sh  prepare-python-runtime.ps1  prepare-python-runtime.sh  xhs_spy.ts
src-tauri/src/: db.rs  ffmpeg.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: account.rs  chat.rs  common.rs  dashboard.rs  diagnostics.rs  geo.rs  hermes.rs  knowledge_base.rs  live_monitor.rs  mod.rs  scraper.rs  studio.rs  tools.rs  user_cards.rs  wechat.rs
src-tauri/src/commands/video_studio/: generation.rs  material.rs  mod.rs  mpt.rs  project.rs  rendering.rs  tasks.rs
(+118 files in other folders)
