[package]
name = "autocast"
version = "0.1.0"
description = "AutoCast AI Podcast System"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
base64 = "0.22"
sysinfo = "0.31"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

